force-app/main/default/objects/Engagement_Counterparty__c/fields/Received_Book__c.field-meta.xml
<CustomField>
    <fullName>Received_Book__c</fullName>
    <description>THIS FIELD IS RETIRED AND MERGED WITH Sent_Date__c. - AYU 7/8</description>
    <label>RETIRED: Sent/Received Book</label>
    <type>Date</type>
</CustomField>