force-app/main/default/objects/Engagement_Counterparty__c/fields/Received_Exec_Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Received_Exec_Confidentiality_Agreement__c</fullName>
    <label>Received Exec CA</label>
    <type>Date</type>
</CustomField>