force-app/main/default/objects/Engagement_Counterparty__c/fields/Report_Counterparty_Company_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Counterparty_Company_Fields__c</fullName>
    <description>For reporting only
0 = Name
1 = Street
2 = City
3 = State
4 = Postal Code
5 = Billing Country
6 = Phone
7 = Fax
8 = Website
9 = Industry Group
10 = Industry Umbrella
11 = Ownership</description>
    <formula>Company__r.Name
 + &apos;|01|&apos; +  Company__r.BillingStreet
 + &apos;|02|&apos; +  Company__r.BillingCity
 + &apos;|03|&apos; +  Company__r.BillingState
 + &apos;|04|&apos; +  Company__r.BillingPostalCode
 + &apos;|05|&apos; +  Company__r.BillingCountry
 + &apos;|06|&apos; +  Company__r.Phone
 + &apos;|07|&apos; +  Company__r.Fax
 + &apos;|08|&apos; +  Company__r.Website
 + &apos;|09|&apos; +  Company__r.Industry_Group_REPORTING__c
 + &apos;|10|&apos; +  Company__r.Industry_Umbrella_REPORTING__c 
 + &apos;|11|&apos; +  TEXT(Company__r.Ownership)</formula>
    <label>Report Counterparty Company Fields</label>
    <type>Text</type>
</CustomField>