force-app/main/default/objects/Engagement_Counterparty__c/fields/Report_Coverage_Officer_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Coverage_Officer_Fields__c</fullName>
    <description>Reporting Field
0 = Full Name
1 = First Name
2 = Middle Name
3 = Last Name
4 = Initials</description>
    <formula>Coverage_Officer__r.Contact_Full_Name__c + &apos;|01|&apos; + Coverage_Officer__r.FirstName + &apos;|02|&apos; +  Coverage_Officer__r.MiddleName  + &apos;|03|&apos; + Coverage_Officer__r.LastName  +  &apos;|04|&apos; +  Coverage_Officer__r.Initials__c</formula>
    <label>Report Coverage Officer Fields</label>
    <type>Text</type>
</CustomField>