force-app/main/default/objects/Engagement_Counterparty__c/fields/Report_Primary_Calling_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Primary_Calling_Fields__c</fullName>
    <description>Reporting Fields 
0 = Full Name 
1 = First Name 
2 = Middle Name 
3 = Last Name 
4 = Initials</description>
    <formula>Primary_Calling_Responsibility__r.Contact_Full_Name__c  + &apos;|01|&apos; + Primary_Calling_Responsibility__r.FirstName + &apos;|02|&apos; + Primary_Calling_Responsibility__r.MiddleName + &apos;|03|&apos; + Primary_Calling_Responsibility__r.LastName + &apos;|04|&apos; + Primary_Calling_Responsibility__r.Initials__c</formula>
    <label>Report Primary Calling Fields</label>
    <type>Text</type>
</CustomField>