force-app/main/default/objects/Engagement_Counterparty__c/fields/Report_Secondary_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Secondary_Contact_Fields__c</fullName>
    <description>Reporting Fields
0 = Full Name
1 = First Name
2 = Middle Name
3 = Last Name
4 = Initials</description>
    <formula>Secondary_HL_Contact__r.Contact_Full_Name__c + &apos;|01|&apos; +  Secondary_HL_Contact__r.FirstName + &apos;|02|&apos; +  Secondary_HL_Contact__r.MiddleName + &apos;|03|&apos; +  Secondary_HL_Contact__r.LastName + &apos;|04|&apos; +  Secondary_HL_Contact__r.Initials__c</formula>
    <label>Report Secondary Contact Fields</label>
    <type>Text</type>
</CustomField>