force-app/main/default/objects/Engagement_Counterparty__c/fields/Return_Hurdle__c.field-meta.xml
<CustomField>
    <fullName>Return_Hurdle__c</fullName>
    <label>Return Hurdle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>