force-app/main/default/objects/Engagement_Counterparty__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Role 1</fullName>
            </value>
            <value>
                <fullName>Role 2</fullName>
            </value>
            <value>
                <fullName>Role 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>