force-app/main/default/objects/Engagement_Counterparty__c/fields/Secondary_HL_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_HL_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Calling Responsibility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Counterparties (Secondary HL Contact)</relationshipLabel>
    <relationshipName>Engagement_Counterparties2</relationshipName>
    <type>Lookup</type>
</CustomField>