force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_BCG_NRL__c.field-meta.xml
<CustomField>
    <fullName>Sent_BCG_NRL__c</fullName>
    <label>Sent BCG NRL</label>
    <type>Date</type>
</CustomField>