force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_BCG_Report__c.field-meta.xml
<CustomField>
    <fullName>Sent_BCG_Report__c</fullName>
    <label>Sent BCG Report</label>
    <type>Date</type>
</CustomField>