force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Blow_up_Letter__c.field-meta.xml
<CustomField>
    <fullName>Sent_Blow_up_Letter__c</fullName>
    <label>Sent Blow-up Letter</label>
    <type>Date</type>
</CustomField>