force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Counter_Executed_CA__c.field-meta.xml
<CustomField>
    <fullName>Sent_Counter_Executed_CA__c</fullName>
    <label>Sent Counter-Executed CA</label>
    <type>Date</type>
</CustomField>