force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_E_Y_NRL__c.field-meta.xml
<CustomField>
    <fullName>Sent_E_Y_NRL__c</fullName>
    <label>Sent E&amp;Y NRL</label>
    <type>Date</type>
</CustomField>