force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Industry_Report__c.field-meta.xml
<CustomField>
    <fullName>Sent_Industry_Report__c</fullName>
    <label>Sent Industry Report</label>
    <type>Date</type>
</CustomField>