force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Legal_NRL__c.field-meta.xml
<CustomField>
    <fullName>Sent_Legal_NRL__c</fullName>
    <label>Sent Legal NRL</label>
    <type>Date</type>
</CustomField>