force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Legal_Report__c.field-meta.xml
<CustomField>
    <fullName>Sent_Legal_Report__c</fullName>
    <label>Sent Legal Report</label>
    <type>Date</type>
</CustomField>