force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Other_NRL__c.field-meta.xml
<CustomField>
    <fullName>Sent_Other_NRL__c</fullName>
    <label>Sent Other NRL</label>
    <type>Date</type>
</CustomField>