force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Other_Report__c.field-meta.xml
<CustomField>
    <fullName>Sent_Other_Report__c</fullName>
    <label>Sent Other Report</label>
    <type>Date</type>
</CustomField>