force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_QoE__c.field-meta.xml
<CustomField>
    <fullName>Sent_QoE__c</fullName>
    <label>Sent QoE</label>
    <type>Date</type>
</CustomField>