force-app/main/default/objects/Engagement_Counterparty__c/fields/Sent_Teaser__c.field-meta.xml
<CustomField>
    <fullName>Sent_Teaser__c</fullName>
    <label>Sent Teaser</label>
    <type>Date</type>
</CustomField>