force-app/main/default/objects/Engagement_Counterparty__c/fields/Signed_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_Agreement__c</fullName>
    <label>Signed Agreement</label>
    <type>Date</type>
</CustomField>