force-app/main/default/objects/Engagement_Counterparty__c/fields/Signed_Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Signed_Term_Sheet__c</fullName>
    <label>Signed Term Sheet</label>
    <type>Date</type>
</CustomField>