force-app/main/default/objects/Engagement_Counterparty__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>TEXT(Engagement__r.Stage__c)</formula>
    <inlineHelpText>Stage field populated from Engagement Object.</inlineHelpText>
    <label>Stage</label>
    <type>Text</type>
</CustomField>