force-app/main/default/objects/Engagement_Counterparty__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( OR( RecordType.Id = &quot;012i0000000tNJN&quot; , RecordType.Id = &quot;012i0000000tKt7&quot; , RecordType.Id = &quot;012i0000001AGQM&quot; ) ,
    Status_Sellside_Joint_Bid_Sellside__c ,
    IF( RecordType.Id = &quot;012i0000000tKt2&quot; ,
        Status_Buyside__c ,
        IF( RecordType.Id = &quot;012i0000000tLTf&quot; ,
            Status_Cap_Markets__c,
            &quot;No Applicable Status&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>