force-app/main/default/objects/Engagement_Counterparty__c/fields/Status_pl__c.field-meta.xml
<CustomField>
    <fullName>Status_pl__c</fullName>
    <label>Status _ picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Phone Discussion</fullName>
            </value>
            <value>
                <fullName>Sent Teaser</fullName>
            </value>
            <value>
                <fullName>Confidentiality Agreement</fullName>
            </value>
            <value>
                <fullName>Executed Confidentiality Agreement</fullName>
            </value>
            <value>
                <fullName>Sent Book</fullName>
            </value>
            <value>
                <fullName>Proposal / Indication</fullName>
            </value>
            <value>
                <fullName>Schedule Management Meeting</fullName>
            </value>
            <value>
                <fullName>Met with Management</fullName>
            </value>
            <value>
                <fullName>Letter of Intent</fullName>
            </value>
            <value>
                <fullName>Declined / Passed</fullName>
            </value>
            <value>
                <fullName>Markup</fullName>
            </value>
            <value>
                <fullName>Had Due Diligence Call</fullName>
            </value>
            <value>
                <fullName>Invited to Dataroom</fullName>
            </value>
            <value>
                <fullName>Sent Counter Executed CA</fullName>
            </value>
            <value>
                <fullName>Received Executed CA</fullName>
            </value>
            <value>
                <fullName>Book Returned</fullName>
            </value>
            <value>
                <fullName>Process Letter Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>