force-app/main/default/objects/Engagement_Counterparty__c/fields/Structures_Provided__c.field-meta.xml
<CustomField>
    <fullName>Structures_Provided__c</fullName>
    <inlineHelpText>Please indicate which of the following structures this Counterparty will offer for this Engagement.</inlineHelpText>
    <label>Structures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2nd Lien</fullName>
            </value>
            <value>
                <fullName>ABL</fullName>
            </value>
            <value>
                <fullName>Common Equity</fullName>
            </value>
            <value>
                <fullName>Convertible Notes</fullName>
            </value>
            <value>
                <fullName>Convertible Preferred Equity</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>High-Yield Bonds</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Structure Equity</fullName>
            </value>
            <value>
                <fullName>Unitranche</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>