force-app/main/default/objects/Engagement_Counterparty__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <formula>Engagement__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>