force-app/main/default/objects/Engagement_Counterparty__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <formula>Engagement__r.Subject__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Name</label>
    <type>Text</type>
</CustomField>