force-app/main/default/objects/Engagement_Counterparty__c/fields/Term_Sheet_Received__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Received__c</fullName>
    <label>Term Sheet Received</label>
    <type>Date</type>
</CustomField>