force-app/main/default/objects/Engagement_Counterparty__c/fields/Total_Cash__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash__c</fullName>
    <label>Total % Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>