force-app/main/default/objects/Engagement_Counterparty__c/fields/Total_Consideration__c.field-meta.xml
<CustomField>
    <fullName>Total_Consideration__c</fullName>
    <label>Total Consideration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>