force-app/main/default/objects/Engagement_Counterparty__c/fields/Total_Price_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Book_Value__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price / Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>