force-app/main/default/objects/Engagement_Counterparty__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capital Provider</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>