force-app/main/default/objects/Engagement_Counterparty__c/fields/Upfront_Cash__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Cash__c</fullName>
    <label>Upfront % Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>