force-app/main/default/objects/Engagement_Counterparty__c/fields/Upfront_Other__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Other__c</fullName>
    <label>Upfront % Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>