force-app/main/default/objects/Engagement_Counterparty__c/fields/Upfront_Premium_to_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Premium_to_Book_Value__c</fullName>
    <label>Upfront Premium to Book Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>