force-app/main/default/objects/Engagement_Counterparty__c/fields/Upfront_Price_Net_Income_Trailing__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Price_Net_Income_Trailing__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upfront Price / Net Income (Trailing)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>