force-app/main/default/objects/Engagement_Counterparty__c/fields/Upfront_Price_Tangible_Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Price_Tangible_Book_Value__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upfront Price / Tangible Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>