force-app/main/default/objects/Engagement_Counterparty__c/fields/View_Record__c.field-meta.xml
<CustomField>
    <fullName>View_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , &quot;Details&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Record</label>
    <type>Text</type>
</CustomField>