force-app/main/default/objects/Engagement_Counterparty__c/recordTypes/Buy_Side.recordType-meta.xml
<RecordType>
    <fullName>Buy_Side</fullName>
    <active>true</active>
    <label>Buyside</label>
</RecordType>