force-app/main/default/objects/Engagement_Counterparty__c/recordTypes/Capital_Markets.recordType-meta.xml
<RecordType>
    <fullName>Capital_Markets</fullName>
    <active>true</active>
    <label>Capital Markets</label>
</RecordType>