force-app/main/default/objects/Engagement_Counterparty__c/recordTypes/FIG_Buyside.recordType-meta.xml
<RecordType>
    <fullName>FIG_Buyside</fullName>
    <active>true</active>
    <label>FIG - Buyside</label>
</RecordType>