force-app/main/default/objects/Engagement_Counterparty__c/recordTypes/FIG_Sellside.recordType-meta.xml
<RecordType>
    <fullName>FIG_Sellside</fullName>
    <active>true</active>
    <label>FIG - Sellside</label>
</RecordType>