force-app/main/default/objects/Engagement_Counterparty__c/recordTypes/IFA.recordType-meta.xml
<RecordType>
    <fullName>IFA</fullName>
    <active>true</active>
    <label>IFA</label>
</RecordType>