force-app/main/default/objects/Engagement_Counterparty__c/recordTypes/Sell_Side.recordType-meta.xml
<RecordType>
    <fullName>Sell_Side</fullName>
    <active>true</active>
    <description>Use this as the default record type (as it is most common scenario)</description>
    <label>Sellside</label>
</RecordType>