force-app/main/default/objects/Engagement_Counterparty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Engagement__c</columns>
    <columns>View_Record__c</columns>
    <columns>Company__c</columns>
    <columns>Status_pl__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Confidentiality_Agreement__c</columns>
    <columns>Sent_Teaser__c</columns>
    <columns>Markup_Sent__c</columns>
    <columns>Markup__c</columns>
    <columns>Executed_Confidentiality_Agreement__c</columns>
    <columns>Proposal_Indication__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement__c</field>
        <operation>equals</operation>
        <value>Project Victor</value>
    </filters>
    <label>All</label>
</ListView>