force-app/main/default/objects/Engagement_Counterparty__c/listViews/My_Engagement_Counterparties.listView-meta.xml
<ListView>
    <fullName>My_Engagement_Counterparties</fullName>
    <columns>Engagement__c</columns>
    <columns>View_Record__c</columns>
    <columns>Company__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Confidentiality_Agreement__c</columns>
    <columns>Sent_Teaser__c</columns>
    <columns>Markup_Sent__c</columns>
    <columns>Markup__c</columns>
    <columns>Executed_Confidentiality_Agreement__c</columns>
    <columns>Proposal_Indication__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Engagement_Counterparty_Comment__c</columns>
    <columns>My_Engagement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement__c</field>
        <operation>equals</operation>
        <value>Project Victor</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement_Counterparty__c.Sell_Side</value>
    </filters>
    <label>My Engagement Counterparties</label>
</ListView>