force-app/main/default/objects/Engagement_Counterparty__c/listViews/TEST.listView-meta.xml
<ListView>
    <fullName>TEST</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>EC - A</value>
    </filters>
    <label>TEST</label>
</ListView>